--- a/index.html
+++ b/index.html
@@ -122,6 +122,20 @@ footer { background:#fff; text-align:center; padding:20px; margin-top:40px; colo
 <header>
   <h1>Леус Андрей</h1>
   <p>18 лет опыта • Экшн-фотография • Взрывы — мой стиль</p>
+  <div id="bannerSlider">
+  <div class="slide active">
+    <img src="action1.jpg" alt="Экшн 1">
+    <span>Андрей Анапа 2007</span>
+  </div>
+  <div class="slide">
+    <img src="action2.jpg" alt="Экшн 2">
+    <span>Андрей Адлер 2010</span>
+  </div>
+  <div class="slide">
+    <img src="action3.jpg" alt="Экшн 3">
+    <span>Сочи Экшн 2015</span>
+  </div>
+</div>
 </header>
 
 <nav>
