--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
 
 <style>
 * { box-sizing:border-box; margin:0; padding:0; }
+  /* Компактный баннер-слайдер */
+#bannerSlider {
+  width: 90%;
+  max-width: 900px;
+  height: 150px; /* компактная высота */
+  margin: 20px auto 0 auto;
+  border-radius:10px;
+  overflow:hidden;
+  position:relative;
+  box-shadow:0 4px 10px rgba(0,0,0,0.1);
+}
+
+#bannerSlider .slide {
+  display:none;
+  position:relative;
+}
+
+#bannerSlider .slide.active {
+  display:block;
+}
+
+#bannerSlider img {
+  width:100%;
+  height:150px; /* компактная высота */
+  object-fit:cover;
+}
+
+#bannerSlider span {
+  position:absolute;
+  bottom:8px;
+  left:10px;
+  background:rgba(0,0,0,0.5);
+  color:#fff;
+  padding:4px 8px;
+  border-radius:5px;
+  font-size:0.9em;
+}
 
 body {
   font-family:'Montserrat', sans-serif;
@@ -122,7 +159,8 @@ footer { background:#fff; text-align:center; padding:20px; margin-top:40px; colo
 <header>
   <h1>Леус Андрей</h1>
   <p>18 лет опыта • Экшн-фотография • Взрывы — мой стиль</p>
-  <div id="bannerSlider">
+ <!-- Компактный баннер-слайдер -->
+<div id="bannerSlider">
   <div class="slide active">
     <img src="action1.jpg" alt="Экшн 1">
     <span>Андрей Анапа 2007</span>
@@ -265,6 +303,21 @@ window.addEventListener("scroll",()=>{
     if(rect.top<window.innerHeight-100){sec.classList.add("visible");}
   });
 });
+  // Компактный баннер-слайдер
+const slides = document.querySelectorAll("#bannerSlider .slide");
+let currentSlide = 0;
+
+function showSlide(index){
+  slides.forEach((slide,i)=> slide.classList.toggle("active", i===index));
+}
+
+function nextSlide(){
+  currentSlide = (currentSlide + 1) % slides.length;
+  showSlide(currentSlide);
+}
+
+// Автоперелистывание каждые 3 секунды
+setInterval(nextSlide, 3000);
 </script>
 
 </body>
