--- a/index.html
+++ b/index.html
@@ -8,54 +8,17 @@
 
 <style>
 * { box-sizing:border-box; margin:0; padding:0; }
-  /* Компактный баннер-слайдер */
-#bannerSlider {
-  width: 90%;
-  max-width: 900px;
-  height: 150px; /* компактная высота */
-  margin: 20px auto 0 auto;
-  border-radius:10px;
-  overflow:hidden;
-  position:relative;
-  box-shadow:0 4px 10px rgba(0,0,0,0.1);
-}
-
-#bannerSlider .slide {
-  display:none;
-  position:relative;
-}
-
-#bannerSlider .slide.active {
-  display:block;
-}
-
-#bannerSlider img {
-  width:100%;
-  height:150px; /* компактная высота */
-  object-fit:cover;
-}
-
-#bannerSlider span {
-  position:absolute;
-  bottom:8px;
-  left:10px;
-  background:rgba(0,0,0,0.5);
-  color:#fff;
-  padding:4px 8px;
-  border-radius:5px;
-  font-size:0.9em;
-}
 
 body {
   font-family:'Montserrat', sans-serif;
-  background:#f5f5f5;
-  color:#222;
+  background:#121212;
+  color:#eee;
   scroll-behavior:smooth;
 }
-  
+
 /* HEADER */
 header {
-  height:100vh;
+  height:90vh;
   display:flex;
   flex-direction:column;
   justify-content:center;
@@ -63,21 +26,22 @@ header {
   text-align:center;
   padding:20px;
 }
-header h1 { font-size:3em; margin-bottom:10px; }
-header p { font-size:1.2em; color:#555; }
+
+header h1 { font-size:3em; margin-bottom:10px; color:#ff512f; }
+header p { font-size:1.2em; color:#bbb; }
 
 /* NAV */
 nav {
   position:sticky;
   top:0;
-  background:#fff;
+  background:#1c1c1c;
   display:flex;
   justify-content:center;
-  box-shadow:0 2px 5px rgba(0,0,0,0.05);
+  box-shadow:0 2px 5px rgba(0,0,0,0.5);
   z-index:100;
 }
 nav a {
-  color:#222;
+  color:#eee;
   padding:15px 22px;
   text-decoration:none;
   transition:.3s;
@@ -85,51 +49,136 @@ nav a {
 }
 nav a:hover { color:#ff512f; }
 
+/* BANNER SLIDER */
+#bannerSlider {
+  width:90%;
+  max-width:900px;
+  height:150px;
+  margin:20px auto;
+  border-radius:12px;
+  overflow:hidden;
+  position:relative;
+  box-shadow:0 5px 15px rgba(0,0,0,0.3);
+}
+
+#bannerSlider .slide { display:none; position:relative; }
+#bannerSlider .slide.active { display:block; }
+
+#bannerSlider img {
+  width:100%;
+  height:150px;
+  object-fit:cover;
+}
+
+#bannerSlider span {
+  position:absolute;
+  bottom:8px;
+  left:10px;
+  background:rgba(0,0,0,0.6);
+  color:#ff512f;
+  padding:4px 8px;
+  border-radius:5px;
+  font-weight:500;
+  font-size:0.9em;
+}
+
 /* SECTIONS */
 section {
   padding:60px 20px;
   max-width:1000px;
-  margin:auto;
-  background:#fff;
+  margin:auto 0 40px 0;
   border-radius:12px;
-  margin-bottom:40px;
-  box-shadow:0 4px 15px rgba(0,0,0,0.05);
+  background:#1c1c1c;
+  box-shadow:0 4px 20px rgba(0,0,0,0.5);
   opacity:0;
   transform:translateY(50px);
   transition:all .6s ease;
 }
+
 section.visible { opacity:1; transform:translateY(0); }
 
 h2 { text-align:center; margin-bottom:40px; font-size:2.2em; color:#ff512f; }
 
 /* ABOUT */
-#about p { font-size:1.15em; line-height:1.7; text-align:center; color:#333; }
+#about p { font-size:1.15em; line-height:1.7; text-align:center; color:#ddd; }
 
 /* PORTFOLIO */
 .portfolio { display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:20px; }
-.card { position:relative; border-radius:12px; overflow:hidden; background:#fff; box-shadow:0 3px 8px rgba(0,0,0,0.08); transition:.3s; }
-.card img { width:100%; height:300px; object-fit:cover; transition:.4s; }
-.card:hover img { transform:scale(1.05); }
-.card span { position:absolute; bottom:0; left:0; right:0; padding:12px; background:rgba(255,255,255,0.9); text-align:center; color:#222; font-weight:500; }
+.card {
+  position:relative;
+  border-radius:12px;
+  overflow:hidden;
+  background:rgba(30,30,30,0.8);
+  box-shadow:0 4px 15px rgba(0,0,0,0.5);
+  transition:.3s;
+}
+.card:hover { transform:scale(1.02); }
+
+.card img {
+  width:100%;
+  height:300px;
+  object-fit:cover;
+  transition:.4s;
+}
+
+.card span {
+  position:absolute;
+  bottom:0;
+  left:0;
+  right:0;
+  padding:12px;
+  background:rgba(0,0,0,0.7);
+  text-align:center;
+  color:#ff512f;
+  font-weight:500;
+}
 
 /* PRICES */
-.price { padding:25px; margin-bottom:20px; border-radius:12px; background:#f9f9f9; text-align:center; border:1px solid #eee; }
+.price {
+  padding:25px;
+  margin-bottom:20px;
+  border-radius:12px;
+  background:rgba(30,30,30,0.8);
+  border:1px solid #333;
+  text-align:center;
+}
 .price h3 { color:#ff512f; margin-bottom:8px; }
 
 /* REVIEWS */
-.review { padding:20px; border-radius:12px; margin-bottom:15px; background:#f9f9f9; border:1px solid #eee; }
+.review {
+  padding:20px;
+  border-radius:12px;
+  margin-bottom:15px;
+  background:rgba(30,30,30,0.8);
+  border:1px solid #333;
+}
 #reviewForm { margin-top:20px; text-align:center; }
-#reviewForm input, #reviewForm textarea { padding:8px; width:250px; margin-bottom:8px; border-radius:5px; border:1px solid #ccc; }
-#reviewForm button { padding:10px 15px; background:#ff512f; color:#fff; border:none; border-radius:20px; cursor:pointer; }
+#reviewForm input, #reviewForm textarea {
+  padding:8px;
+  width:250px;
+  margin-bottom:8px;
+  border-radius:5px;
+  border:1px solid #555;
+  background:#222;
+  color:#eee;
+}
+#reviewForm button {
+  padding:10px 15px;
+  background:#ff512f;
+  color:#fff;
+  border:none;
+  border-radius:20px;
+  cursor:pointer;
+}
 
 /* CONTACTS */
 #contacts p { text-align:center; font-size:1.1em; margin-bottom:10px; }
 .socials { display:flex; justify-content:center; gap:20px; margin-top:20px; }
-.socials img { width:40px; transition:.3s; }
-.socials img:hover { transform:scale(1.2); }
+.socials img { width:40px; filter:brightness(0) invert(1); transition:.3s; }
+.socials img:hover { transform:scale(1.2); filter:brightness(1) invert(0); }
 
 /* FOOTER */
-footer { background:#fff; text-align:center; padding:20px; margin-top:40px; color:#555; font-size:0.95em; }
+footer { background:#1c1c1c; text-align:center; padding:20px; margin-top:40px; color:#bbb; font-size:0.95em; }
 </style>
 </head>
 
@@ -138,21 +187,13 @@ footer { background:#fff; text-align:center; padding:20px; margin-top:40px; colo
 <header>
   <h1>Леус Андрей</h1>
   <p>18 лет опыта • Экшн-фотография • Взрывы — мой стиль</p>
- <!-- Компактный баннер-слайдер -->
-<div id="bannerSlider">
-  <div class="slide active">
-    <img src="action1.jpg" alt="Экшн 1">
-    <span>Андрей Анапа 2007</span>
+
+  <!-- Баннер -->
+  <div id="bannerSlider">
+    <div class="slide active"><img src="action1.jpg" alt="Экшн 1"><span>Андрей Анапа 2007</span></div>
+    <div class="slide"><img src="action2.jpg" alt="Экшн 2"><span>Андрей Адлер 2010</span></div>
+    <div class="slide"><img src="action3.jpg" alt="Экшн 3"><span>Сочи Экшн 2015</span></div>
   </div>
-  <div class="slide">
-    <img src="action2.jpg" alt="Экшн 2">
-    <span>Андрей Адлер 2010</span>
-  </div>
-  <div class="slide">
-    <img src="action3.jpg" alt="Экшн 3">
-    <span>Сочи Экшн 2015</span>
-  </div>
-</div>
 </header>
 
 <nav>
@@ -180,7 +221,6 @@ footer { background:#fff; text-align:center; padding:20px; margin-top:40px; colo
   <div class="card"><img id="photo1" src="action1.jpg"><span>Андрей Анапа 2007</span></div>
   <div class="card"><img id="photo2" src="action2.jpg"><span>Андрей Адлер 2010</span></div>
 </div>
-<input type="file" id="upload" accept="image/*">
 </section>
 
 <section id="prices">
@@ -215,8 +255,14 @@ footer { background:#fff; text-align:center; padding:20px; margin-top:40px; colo
 </footer>
 
 <script>
+// Баннер-слайдер
+const slides = document.querySelectorAll("#bannerSlider .slide");
+let currentSlide = 0;
+function showSlide(index){ slides.forEach((slide,i)=> slide.classList.toggle("active", i===index)); }
+function nextSlide(){ currentSlide = (currentSlide + 1) % slides.length; showSlide(currentSlide); }
+setInterval(nextSlide, 3000);
 
-// === REVIEWS ===
+// Отзывы
 if(!localStorage.getItem("reviews")){
   const defaultReviews=[
     {name:"София",text:"Леус сделал потрясающие фото с взрывами, это супер!"},
@@ -225,7 +271,6 @@ if(!localStorage.getItem("reviews")){
   ];
   localStorage.setItem("reviews",JSON.stringify(defaultReviews));
 }
-
 const reviewList=document.getElementById("reviewList");
 const reviewName=document.getElementById("reviewName");
 const reviewText=document.getElementById("reviewText");
@@ -253,7 +298,7 @@ submitReview.onclick=()=>{
 }
 renderReviews();
 
-// === ANIMATION ON SCROLL ===
+// Анимация секций
 const sections=document.querySelectorAll("section");
 window.addEventListener("scroll",()=>{
   sections.forEach(sec=>{
@@ -261,21 +306,6 @@ window.addEventListener("scroll",()=>{
     if(rect.top<window.innerHeight-100){sec.classList.add("visible");}
   });
 });
-  // Компактный баннер-слайдер
-const slides = document.querySelectorAll("#bannerSlider .slide");
-let currentSlide = 0;
-
-function showSlide(index){
-  slides.forEach((slide,i)=> slide.classList.toggle("active", i===index));
-}
-
-function nextSlide(){
-  currentSlide = (currentSlide + 1) % slides.length;
-  showSlide(currentSlide);
-}
-
-// Автоперелистывание каждые 3 секунды
-setInterval(nextSlide, 3000);
 </script>
 
 </body>
