--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ footer { background:#1c1c1c; text-align:center; padding:20px; margin-top:40px; c
 <div id="reviewForm">
 <input type="text" id="reviewName" placeholder="Ваше имя"><br>
 <textarea id="reviewText" placeholder="Ваш отзыв" rows="3"></textarea><br>
-<button id="submitReview">Отправить отзыв</button>
+<button id="submitReview">Отправить </button>
 </div>
 </section>
 
