--- a/index.html
+++ b/index.html
@@ -186,13 +186,13 @@ footer { background:#1c1c1c; text-align:center; padding:20px; margin-top:40px; c
 
 <header>
   <h1>Леус Андрей</h1>
-  <p>18 лет опыта • Экшн-фотография • Взрывы — мой стиль</p>
+  <p>18 лет опыта • Экшн-фотография • Взрывы - мой стиль</p>
 
   <!-- Баннер -->
   <div id="bannerSlider">
-    <div class="slide active"><img src="action1.jpg" alt="Экшн 1"><span>Андрей Анапа 2007</span></div>
-    <div class="slide"><img src="action2.jpg" alt="Экшн 2"><span>Андрей Адлер 2010</span></div>
-    <div class="slide"><img src="action3.jpg" alt="Экшн 3"><span>Сочи Экшн 2015</span></div>
+    <div class="slide active"><img src="action1.jpg" alt="Экшн 1"><span>Анапа 2007</span></div>
+    <div class="slide"><img src="action2.jpg" alt="Экшн 2"><span>Адлер 2010</span></div>
+    <div class="slide"><img src="action3.jpg" alt="Экшн 3"><span>Сочи 2015</span></div>
   </div>
 </header>
 
@@ -210,23 +210,21 @@ footer { background:#1c1c1c; text-align:center; padding:20px; margin-top:40px; c
 Меня зовут Леус Андрей. Я профессиональный фотограф с 18-летним опытом.
 Моя специализация — экшн-фотография, динамика, адреналин и кадры на фоне взрывов. 
 Я создаю изображения, которые невозможно забыть.
-Мой девиз: И на груди его могучей, три волоса казались кучей!
-Если ты это видишь — меня съел какашечный монстр!
 </p>
 </section>
 
 <section id="portfolio">
 <h2>Портфолио</h2>
 <div class="portfolio">
-  <div class="card"><img id="photo1" src="action1.jpg"><span>Андрей Анапа 2007</span></div>
-  <div class="card"><img id="photo2" src="action2.jpg"><span>Андрей Адлер 2010</span></div>
+  <div class="card"><img id="photo1" src="action1.jpg"><span>Анапа 2007</span></div>
+  <div class="card"><img id="photo2" src="action2.jpg"><span>Адлер 2010</span></div>
 </div>
 </section>
 
 <section id="prices">
 <h2>Прайс-лист</h2>
-<div class="price"><h3>Экшн-съёмка</h3><p>от 30 000 тенге — взрывы, спецэффекты, обработка</p></div>
-<div class="price"><h3>Индивидуальная съёмка</h3><p>от 12 000 доляров — авторский стиль</p></div>
+<div class="price"><h3>Экшн-съёмка</h3><p>от 30 000 ₽ - взрывы, спецэффекты, обработка</p></div>
+<div class="price"><h3>Индивидуальная съёмка</h3><p>от 12 000 ₽ - авторский стиль</p></div>
 </section>
 
 <section id="reviews">
