--- a/index.html
+++ b/index.html
@@ -32,22 +32,23 @@ header p { font-size:1.2em; color:#bbb; }
 
 /* NAV */
 nav {
-  position:sticky;
-  top:0;
-  background:#1c1c1c;
-  display:flex;
-  justify-content:center;
-  box-shadow:0 2px 5px rgba(0,0,0,0.5);
-  z-index:100;
+    position: sticky;
+    top: 0;
+    background: #000;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;          /* 🔥 ВАЖНО */
+    max-width: 100%;
+    overflow-x: hidden;
 }
+
 nav a {
-  color:#eee;
-  padding:15px 22px;
-  text-decoration:none;
-  transition:.3s;
-  font-weight:500;
+    color: #ff512f;
+    padding: 12px 16px;       /* 🔥 уменьшили */
+    text-decoration: none;
+    font-size: 0.95em;
+    white-space: nowrap;      /* чтобы слова не ломались */
 }
-nav a:hover { color:#ff512f; }
 
 /* BANNER SLIDER */
 #bannerSlider {
